src/test/ui/error-codes/E0296.stderr
error[E0296]: malformed recursion limit attribute, expected #![recursion_limit="N"]
  --> $DIR/E0296.rs:11:1
   |
11 | #![recursion_limit] //~ ERROR E0296
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

